--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lemurs</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="header">
+        <h1>Lemurs</h1>
+        <ul>
+            <li><a href=""></a>About us</li>
+            <li><a href=""></a>Contacts</li>
+            <li><a href=""></a>FAQ</li>
+        </ul>
+        <img src="./images/lemur.jpg" alt="lemur">
+    </div>
 </body>
 </html>
