--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <h1>Lemurs</h1>
-        <ul>
-            <li><a href=""></a>About us</li>
-            <li><a href=""></a>Contacts</li>
-            <li><a href=""></a>FAQ</li>
-        </ul>
+    <div class="wrapper">
+        <div class="nav">
+            <div class="logo">Lemurs</div>
+            <div>
+                <ul>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Contacts</a></li>
+                    <li><a href="#">FAQ</a></li>
+                </ul>
+            </div>
+        </div>
         <img src="./images/lemur.jpg" alt="lemur">
     </div>
 </body>
