Finished the card

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="wrapper">
         <div class="nav">
-            <div class="logo">Lemurs</div>
+            <h2>Lemurs</h2>
             <div>
                 <ul>
                     <li><a href="#">About us</a></li>
@@ -19,7 +19,14 @@
                 </ul>
             </div>
         </div>
-        <img src="./images/lemur.jpg" alt="lemur">
+        <div class="card">
+            <div class="text">
+            <p class="main-text">The website is awesome</p>
+            <p class="sec-text">This site has some subtext that goes here under the main text title. It's a smaller font and the color is lower contrast.</p>
+                <button class="main-button">Sign Up</button>
+            </div>
+            <div><img src="./images/lemur.jpg" alt="lemur"></div>
+        </div>
     </div>
 </body>
 </html>
